--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "gsap": "^3.13.0",
     "input-otp": "1.4.1",
+    "locomotive-scroll": "^4.1.3",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
@@ -62,6 +64,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
