--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
     "geist": "^1.3.1",
     "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "locomotive-scroll": "^4.1.3",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.17.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
