--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^8.17.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -69,6 +70,7 @@
     "@tailwindcss/postcss": "^4.1.9",
     "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
